# quebec-2026

./: .gitignore  CMakeLists.txt  README.md
examples/Args/: Args.c
examples/Expression/: Expression.c
examples/FizzBuzz/: FizzBuzz.c
examples/HelloWorld/: HelloWorld.c
examples/If/: If.c  While.c
include/File/: File.h
include/IR/: IR.h  IRTypes.inc  Typing.h
include/Lexer/: Common.h  Delims.h  Delims.inc  Keywords.h  Keywords.inc  Lexer.h  Operators.h  Operators.inc  StringTypes.h  Token.h  TokenTypes.h  TokenTypes.inc
include/Log/: Color.h  Log.h
include/Parser/: Binops.inc  Body.inc  Conditionals.inc  Functions.inc  Monops.inc  Parser.h  Return.inc  SyntaxErrors.h  SyntaxErrors.inc  SyntaxMap.h  SyntaxMap.inc  SyntaxTypes.h  SyntaxTypes.inc  Typing.inc
include/Utils/: Macro.h
src/: Main.c
src/File/: File.c
src/IR/: IR.c  Typing.c
src/Lexer/: Lexer.c  Token.c
src/Log/: Log.c
src/Parser/: Parser.c  SyntaxErrors.c  SyntaxTypes.c
src/Utils/: Common.c
tests/: Main.c
tests/Tests/: Test.h
tests/Tests/Lexer/: Constants.h  Keywords.h  Lexer.h  Operators.h
